# delta_robot

./: .gitignore  README.md
matlab/: delta_picker_motorenauslegung.mlx
src/delta_robot/: CMakeLists.txt  package.xml
src/delta_robot/include/: commot_node.hpp  kinematics.h
src/delta_robot/src/: commot_node.cpp  kinematics.cpp  operation_node.cpp  opmod_node.cpp
src/delta_robot_interfaces/: CMakeLists.txt  package.xml
src/delta_robot_interfaces/msg/: GoalPosEffector.msg  OpMod.msg
src/delta_robot_ros2/delta_robot_description/: CMakeLists.txt  package.xml
src/delta_robot_ros2/delta_robot_description/meshes/delta_robot/: 63755205_1.part  63755205_1.stl  63755205_2.part  63755205_2.stl  63755205_3.part  63755205_3.stl  base_plate.part  base_plate.stl  bicep_rod.part  bicep_rod.stl  connecting_element.part  connecting_element.stl  connecting_element_half.part  connecting_element_half.stl  dc13_x540_dummy.part  dc13_x540_dummy.stl  end_effector_base_v02.part  end_effector_base_v02.stl  forarm_rod.part  forarm_rod.stl  forarm_rod_half.part  (+3 more)
src/delta_robot_ros2/delta_robot_description/rviz/: delta_robot.rviz
src/delta_robot_ros2/delta_robot_description/urdf/: delta_robot_urdf.xacro
src/delta_robot_ros2/delta_robot_gazebo/: CMakeLists.txt  package.xml
src/delta_robot_ros2/delta_robot_gazebo/config/: delta_robot_controllers.yaml  ros_gz_bridge.yaml
src/delta_robot_ros2/delta_robot_gazebo/launch/: delta_robot_bringup_classic_gazebo.launch.py  delta_robot_bringup_gazebo.launch.py  delta_robot_bringup_ros2_control_classic_gazebo.launch.py
src/delta_robot_ros2/delta_robot_gazebo/urdf/: delta_robot_classic_gazebo.urdf.xacro  delta_robot_classic_gazebo_V2.urdf.xacro  delta_robot_classic_gazebo_V3.urdf.xacro  delta_robot_gazebo.urdf.xacro  delta_robot_gazebo.urdf_V01.xacro  test.sdf
src/delta_robot_ros2/delta_robot_ros2/: CMakeLists.txt  package.xml
stl/: base_housing.stl  base_plate.stl  bicep_rod.stl  end_effector_base.stl  forarm_rod_divided_1.stl  forarm_rod_divided_2.stl  motor_mount.stl
(+3 files in other folders)
